# learn_ffmpeg

./: Cargo.toml
src/: main.rs  player.rs
src/player/: audio.rs  video.rs
