[package]
name = "svg"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ffmpeg-next = "6.0.0"
iced = { version = "0.10", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
tokio = { version = "1.28", features = ["full"] }
