[package]
name = "svg"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
ffmpeg-next = "6.0.0"
iced = { version = "0.10", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
tokio = { version = "1.28", features = ["full"] }
futures = { version = "0.3.28" }
cpal = "0.15.2"
ringbuf = "0.3.3"
bytemuck = "1.13.1"
derive_more = "0.99.5"
smol = "1.3.0"
